style: add inlined background image to slide deck

--- a/src/style/slide-deck.scss
+++ b/src/style/slide-deck.scss
@@ -1,8 +1,9 @@
 @import 'mixins';
 @import 'settings';
 
-body {
-  background-image: url('./images/pattern.png');
+@mixin bodyBackground() {
+  background-image: inline('./images/pattern.png');
+  background-repeat: repeat;
 }
 
 @import 'theme';
