--- a/src/style/slide-deck.scss
+++ b/src/style/slide-deck.scss
@@ -1,9 +1,24 @@
 @import 'mixins';
 @import 'settings';
 
+$backgroundColor: white;
+
 @mixin bodyBackground() {
-  background: inline('./images/pattern.png'), linear-gradient(to left, rgba(white, 1) 35%, rgba(white, 0));
+  background: #FFF;
+  background: inline('./images/pattern.png');
   background-repeat: repeat;
+  background-size: 200px;
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to left, rgba($backgroundColor, 1) 25%, rgba($backgroundColor, 0));
+  }
 }
 
 @import 'theme';
