--- a/src/style/slide-deck.scss
+++ b/src/style/slide-deck.scss
@@ -12,7 +12,7 @@ $selectionBackgroundColor: mix(black, $opi-red, 25%);
   background: inline('./images/pattern.png');
   background-repeat: repeat;
   background-size: 200px;
-  &:after {
+  &:before {
     content: '';
     position: absolute;
     top: 0;
@@ -22,6 +22,15 @@ $selectionBackgroundColor: mix(black, $opi-red, 25%);
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to left, rgba($backgroundColor, 1) 25%, rgba($backgroundColor, 0));
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 83px;
+    width: 255px;
+    background-image: inline('./images/OPi-logo-stacked.png');
   }
 }
 
